crates/hird-check/tests/snapshots/inference__field_access_needs_known_record.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r\"fn get(r: a) = r.age\")"
---
get : ∀a. a
error[C0009] 14..20: cannot determine the record type of this expression; add a type annotation
