crates/hird-check/tests/snapshots/inference__handle_effect_arity_mismatch_rejected.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(\"fn bad(h: Int -> Int) -> Int = handle { Tool -> h } in 0\")"
---
bad : (Int → Int) → Int
error[C0028] 40..44: effect `Tool` expects 1 type argument(s), but 0 were given
