crates/hird-check/tests/snapshots/inference__handle_nested_blocks.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(\"effect Log\\n\\\n         effect Tool<t>\\n\\\n         tool Repo : { x: Int } -> Int\\n\\\n         fn nested(f: Int -> Int ! {Log, Tool<Repo>}, lh: Int -> Int, th: { x: Int } -> Int) -> Int =\\n\\\n           handle { Log -> lh } in handle { Tool<Repo> -> th } in f(0)\")"
---
nested : (Int → Int ! {Log, Tool<Repo>}) → (Int → Int) → ({ x: Int } → Int) → Int
repo : { x: Int } → Int ! {Tool<Repo>}
